WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30932
REGRESSION: Crash when turning on Private Browsing on site with flash.
https://bugs.webkit.org/show_bug.cgi?id=30932
Summary
REGRESSION: Crash when turning on Private Browsing on site with flash.
David Levin
Reported
2009-10-29 15:14:53 PDT
Repro steps: 1. Start webkit 2. Go to
http://youtube.com
(or any site with flash, I think) 3. Turn on "Private Browsing" crash. It happens on this line "[_pluginPackage.get() pluginFuncs]->setvalue(plugin, NPNVprivateModeBool, &value);" of privateBrowsingModeDidChange in file WebNetscapePluginView.mm
Attachments
Crash info.
(42.56 KB, text/plain)
2009-10-29 15:15 PDT
,
David Levin
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2009-10-29 15:15:24 PDT
Created
attachment 42152
[details]
Crash info.
David Levin
Comment 2
2009-10-29 15:16:37 PDT
It looks like this was introduced with
r49512
.
David Levin
Comment 3
2009-10-29 15:22:37 PDT
***
Bug 30525
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 4
2009-10-29 16:18:17 PDT
<
rdar://problem/7350269
>
Anders Carlsson
Comment 5
2009-10-29 16:30:13 PDT
http://trac.webkit.org/changeset/50308
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug