https://bugs.webkit.org/show_bug.cgi?id=30932 <rdar://problem/7350269>

Reviewed by Sam Weinig.

REGRESSION: Crash when turning on Private Browsing on site with flash.

Null check setValue.

* Plugins/WebNetscapePluginView.mm:
(-[WebNetscapePluginView privateBrowsingModeDidChange]):



Canonical link: https://commits.webkit.org/41750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50308 268f45cc-cd09-0410-ab3c-d52691b4dbfc